# autoclip

./: CNAME  Cargo.toml  README.md
.github/workflows/: rust.yml
app/: Cargo.toml
app/src/: clipboard.rs  config.rs  installer.rs  main.rs  plugin.rs
app/src/platform/: macos.rs  mod.rs
artifacts/plugins-macos-12/: libautoclip_plugin_amazon.dylib
artifacts/plugins-macos-latest/: libautoclip_plugin_amazon.dylib
core/: Cargo.toml
core/src/: lib.rs
gui/: Cargo.toml  tauri.conf.json
gui/ui/: Cargo.toml  Trunk.toml
plugin-amazon/: Cargo.toml
plugin-amazon/src/: lib.rs
