[package]
name = "autoclip-app"
description = "Do something on your clipboard, automatically."
version = "0.1.0"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/siketyan/autoclip"
repository = "https://github.com/siketyan/autoclip.git"
authors = ["Naoki Ikeguchi <root@siketyan.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
autoclip-core = { path = "../core" }
clap = "2.33.3"
clipboard = "0.5.0"
dirs = "3.0.1"
error-code = "2.0.2"
libloading = "0.6.6"
reqwest = { version = "0.10.10", features = ["blocking"] }
serde = { version = "1.0.118", features = ["derive"] }
serde_yaml = "0.8.14"
thiserror = "1.0.23"
url = "2.2.0"
