[package]
name = "autoclip-app"
description = "Do something on your clipboard, automatically."
version = "0.1.0"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/siketyan/autoclip"
repository = "https://github.com/siketyan/autoclip.git"
authors = ["Naoki Ikeguchi <root@siketyan.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
autoclip-core = { path = "../core" }
clap = "3.2"
arboard = "3.1"
dirs = "4.0"
error-code = "2.0"
libloading = "0.7"
reqwest = { version = "0.11", features = ["blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_yaml = "0.9"
thiserror = "1.0"
url = "2.2"

[target.'cfg(target_os = "macos")'.dependencies]
cacao = "0.3.2"
objc = "0.2.7"
objc_id = "0.1.1"
objc-foundation = "0.1.1"
